initial JS and component app js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Student Grade Table</h1>
-    <table>
+    <table class="table table-dark">
         <thead>
             <tr>
                 <td>Student Name</td>
@@ -35,7 +35,8 @@
     </table>
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="components/app.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
