dynamic creation and render of grades success

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <td>Grade</td>
             </tr>
         </thead>
+        <tbody>
+            
+        </tbody>
     </table>
 
 
