header-2-col-grid

--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
 </head>
 
 <body>
-    <h1>Student Grade Table</h1>
-    <table class="table table-dark">
-        <thead>
-            <tr>
-                <td>Student Name</td>
-                <td>Course</td>
-                <td>Grade</td>
-            </tr>
-        </thead>
-        <tbody>
-            
-        </tbody>
-    </table>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-8">
+                    <h1>Student Grade Table</h1>
+                </div>
+                <div class="col-4">
+                    <h3>Average Grade 84</h3>
+                </div>
+            </div>
+        </div>
+    </header>
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <td>Student Name</td>
+                        <td>Course</td>
+                        <td>Grade</td>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
