--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <h1>Student Grade Table</h1>
                 </div>
                 <div class="col-4">
-                    <h3>Average Grade <span class="badge badge-pill badge-secondary">84</span></h3>
+                    <h3>Average Grade <span class="badge badge-pill badge-secondary"></span></h3>
                 </div>
             </div>
         </div>
