--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </div>
         </div>
     </header>
-            <table class="table table-dark">
+        <div class="row">
+            <table class="table table-dark col-8">
                 <thead>
                     <tr>
                         <td>Student Name</td>
@@ -31,8 +32,15 @@
                 </thead>
                 <tbody>
 
-                </tbody>
+                <tbody>
             </table>
+            <form class="col-3">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="student-name" placeholder="Student Name">
+                </div>
+            </form>
+        </div>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
