--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
         <div class="row">
-            <table class="table table-dark col-8">
+            <table class="table table-dark col-7">
                 <thead>
                     <tr>
                         <td>Student Name</td>
@@ -36,7 +36,17 @@
             </table>
             <form class="col-3">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="student-name" placeholder="Student Name">
+                    <input type="text" class="form-control" id="student-name" name="name" placeholder="Student Name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="student-course" name="course" placeholder="Course">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="student-grade" name="grade" placeholder="Grade">
+                </div>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary offset-6" type="submit" value="Input">Add</button>
+                    <button type="button" class="btn btn-danger" type="reset" value="Reset">Cancel</button>
                 </div>
             </form>
         </div>
