--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
                 <tbody>
             </table>
             <form class="col-3">
-                <div class="form-group">
+                <div class="input-group mb-3">
+                    <label><i class="fas fa-users"></i></label>
                     <input type="text" class="form-control" id="name" name="name" placeholder="Student Name">
                 </div>
-                <div class="form-group">
+                <div class="input-group mb-3">
+                    <i class="fas fa-book-open"></i>
                     <input type="text" class="form-control" id="course" name="course" placeholder="Course">
                 </div>
-                <div class="form-group">
+                <div class="input-group mb-3">
+                    <i class="fas fa-edit"></i>
                     <input type="number" class="form-control" id="grade" name="grade" placeholder="Grade">
                 </div>
                 <div class="form-group">
