--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <td>Student Name</td>
                         <td>Course</td>
                         <td>Grade</td>
+                        <td>Operations</td>
                     </tr>
                 </thead>
                 <tbody>
