--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
                 <tbody>
             </table>
+            <p class="d-none">No Grades Recorded</p>
             <form class="col-3">
                 <div class="input-group mb-3">
                     <label><i class="fas fa-users"></i></label>
