--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
                 <tbody>
             </table>
-            <p class="d-none">No Grades Recorded</p>
             <form class="col-3">
                 <div class="input-group mb-3">
                     <label><i class="fas fa-users"></i></label>
@@ -51,9 +50,12 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary offset-6" type="submit" value="Input">Add</button>
-                    <button class="btn btn-danger" type="reset" value="Reset">Cancel</button>
+                    <button class="btn btn-warning" type="reset" value="Reset">Cancel</button>
                 </div>
             </form>
+        </div>
+        <div>
+            <p class="d-none" id="no-grades">No Grades Recorded</p>
         </div>
 
 
